internalAMS/force-app/main/default/objects/Employee__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Active indicates that the employee is currently working.</description>
    <inlineHelpText>This is to show that employee is currently working.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>