internalAMS/force-app/main/default/objects/Employee__c/fields/Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Department_Name__c</fullName>
    <label>Department Name</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>